          07-02-03  Bfo     memstuff    : PLUGIN_DLL dependencies removed
          07-02-03  Bfo     os9exec_nt  : <enabled> field added for "plug_typ"
          07-02-04  Bfo     os9exec_nt  - "plug_typ" with <pEnabled>,<pDisabled> and <fDLL>
          07-02-04  Bfo                 - "DLL_Suffix", "NumberOfNativeProgs" and "ConnectDLL" moved to 
                                          "intcommand"
          07-02-04  Bfo     intcommand  - DLL connect/disconnect implemented here now
                                        - "Plugin_Possible"/"Native_Possible" enhanced
          07-02-04  Bfo     fcalls      : "Plugin_Possible"/"Native_Possible" are more orthogonal now
                                                
    3.35  07-??-??  Bfo
    ------------------- 
*/



/* unresolved bugs: */
/*
    !!  "_" name convention on Windows (hawk_C0).
    
    -   MPW uses its I/O currently partly also for the tty/pty system.
    -   "mgencas" will not startup over network (Linux), "mme" has also problems.
    -   Linux/MacOSX telnet close still quits emulator (recognition of end cond not correctly)
    -   "inetd" superdaemon is not yet running correctly.
    -   A$AtDate restricted to 248 days / will not adjust when system time changes

   (+)  Take tty00/pty00 first (problems with arbitration)
   (+)  setime_Y2K version with param passing --> 1900
   (+)  icpt_signal problem with "clock2" utility
*/


/* To do: */
/*
    -   RBF: do read only, if write larger than a sector
    -  (SCSI subsystem for Linux)
    -   direct line editing on Linux (over network)
    -   Faster directory read (Windows)
    -   Implement internal command "ls" in UNIX style: "ls -la".
    -   <in_recursion> for debug load
    -   btree optimisation
    -   termcap support for the DOS window.
    -   paging for SCF devices
    -   tab expansion for SCF devices

   (+)  return  of d1.l from pipe-systasks
   (+)  passing of d2.l to   pipe-open
*/